Regression: The Material Preview doesn't show #96524

Closed
opened 2022-03-16 15:42:17 +01:00 by Óscar · 10 comments

System Information
Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA Quadro K3000M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: Blender version 3.0.0

This is apparently caused by 3c04b44913

Short description of error
The Material Preview doesn't show on Propierties Editor > Material Properties > Preview Panel.

Exact steps for others to reproduce the error

  1. Open the default startup file.
  2. Immediately go to Properties Editor > Material Properties > Preview Panel and open it (don't move the view in the viewport).
  3. The window of the material preview shows blank, I wait a long time (more than 2 minutes) but nothing happens.
  4. This happens with Eevee and Cycles.

NOTE 1: If you scroll down the panel to hide the material preview window and then scroll up to show the material preview window, the preview of the material appears. This happens with both, Cycles and Eevee.

NOTE 2: With Cycles selected like render engine and the Preview Panel open, if you move the view in the viewport the material preview appears.

NOTE 3: Recently I changed the original graphics card (Radeon HD 6970M 2 GB GDDR5) of my iMac 27" i7 mid 2011 for a NVIDIA Quadro K3000M, I don't know if this can influence but with Blender 3.0.0 all work fine.

Based on the default startup file.

Material Preview.jpg

**System Information** Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA Quadro K3000M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: Blender version 3.0.0 This is apparently caused by 3c04b44913 **Short description of error** The Material Preview doesn't show on Propierties Editor > Material Properties > Preview Panel. **Exact steps for others to reproduce the error** 1. Open the default startup file. 2. Immediately go to Properties Editor > Material Properties > Preview Panel and open it (don't move the view in the viewport). 3. The window of the material preview shows blank, I wait a long time (more than 2 minutes) but nothing happens. 4. This happens with Eevee and Cycles. **NOTE 1:** If you scroll down the panel to hide the material preview window and then scroll up to show the material preview window, the preview of the material appears. This happens with both, Cycles and Eevee. **NOTE 2:** With Cycles selected like render engine and the Preview Panel open, if you move the view in the viewport the material preview appears. **NOTE 3:** Recently I changed the original graphics card (Radeon HD 6970M 2 GB GDDR5) of my iMac 27" i7 mid 2011 for a NVIDIA Quadro K3000M, I don't know if this can influence but with Blender 3.0.0 all work fine. Based on the default startup file. ![Material Preview.jpg](https://archive.blender.org/developer/F12930243/Material_Preview.jpg)
Author

Added subscriber: @Oxer-1

Added subscriber: @Oxer-1

#98125 was marked as duplicate of this issue

#98125 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can confirm here on Windows.
I will check.
Broken between 713d59bcafb1- e6ca0b33e9
Edit: I'm getting an error while bisecting (need to fix, will raise the priority for now)

Hi, thanks for the report. Can confirm here on Windows. I will check. Broken between 713d59bcafb1- e6ca0b33e920 Edit: I'm getting an error while bisecting (need to fix, will raise the priority for now)
Pratik Borhade changed title from Bug: The Material Preview doesn't show on macOS 10.13.6 & Blender 3.1.0 to Regression: The Material Preview doesn't show 2022-03-17 11:26:30 +01:00
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

This is apparently caused by 3c04b44913

CC @Sergey

This is apparently caused by 3c04b44913 CC @Sergey

This issue was referenced by 8344ef7394

This issue was referenced by 8344ef73940d985a56d83fcd01825973597eb6b4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-03-22 16:00:27 +01:00
Member

Added subscriber: @blendask

Added subscriber: @blendask
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96524
No description provided.